base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdf
    spec:
      containers:
        - image: jcy0308/pdf-module
          imagePullPolicy: Always
          name: pdf-module
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 2
              memory: 3Gi
            limits: 
              cpu: 2
              memory: 4Gi
